--- a/index.html
+++ b/index.html
@@ -1,36 +1,36 @@
-<!DOCTYPE html>
-<html ng-app='ShoppingList'>
-  <head>
+<!doctype html>
+<html lang="en" ng-app="MenuApp">
+<head>
     <meta charset="utf-8">
+    <title>Restaurant Menu</title>
     <link rel="stylesheet" href="css/styles.css">
-    <title>No Cookie Shopping List</title>
-  </head>
-  <body>
-    <h1>Welcome to Premade No Cookie Shopping List</h1>
+</head>
+<body>
+
+<h1>Restaurant Menu</h1>
+    <a ui-sref="home">home</a>
+    <a ui-sref="categories">categories</a>
+    <a ui-sref="items">items</a>
+
 
     <ui-view></ui-view>
-
-    <loading-spinner></loading-spinner>
 
     <!-- Libraries -->
     <script src="lib/angular.min.js"></script>
     <script src="lib/angular-ui-router.min.js"></script>
 
     <!-- Modules -->
-    <script src="src/shoppinglist/shoppinglist.module.js"></script>
-    <script src="src/spinner/spinner.module.js"></script>
+    <script src="src/data/data.module.js"></script>
+    <script src="src/menuapp/menuapp.module.js"></script>
 
     <!-- Routes -->
     <script src="src/routes.js"></script>
 
-    <!-- 'ShoppingList' module artifacts -->
-    <script src="src/shoppinglist/shoppinglist.component.js"></script>
-    <script src="src/shoppinglist/main-shoppinglist.controller.js"></script>
-    <script src="src/shoppinglist/shoppinglist.service.js"></script>
-    <script src="src/shoppinglist/item-detail.controller.js"></script>
+    <script src="src/menuapp/categories.controller.js"></script>
+    <script src="src/menuapp/categories.component.js"></script>
+    <script src="src/menuapp/items.controller.js"></script>
+    <script src="src/menuapp/items.component.js"></script>
+    <script src="src/data/menudata.service.js"></script>
 
-    <!-- 'Spinner' module artifacts -->
-    <script src="src/spinner/loadingspinner.component.js"></script>
-
-  </body>
+</body>
 </html>
